@@ -2,6 +2,12 @@
 *** HYBRID CHANGELOG
 *** Newest entries at top
 
+version hybrid-6-b72   15-May-1999
+* Fixed send.c to be rfc compliant. 
+* kick of client who joined through a ban due to a +e, has +e removed by server
+* misplaced returns in mtrie_conf.c fixed.	
+-Dianora
+
 version hybrid-6-b71   12-May-1999
 * corrected mtrie_conf.c problems
 * added stats o flags
